Pose bones' selection doesn't update in the viewport if it was changed outside of the viewport. #60602

Closed
opened 2019-01-17 22:49:25 +01:00 by Demeter Dzadik · 5 comments
Member

pose_bone_selection_bug.webm
Blender Version
2.80 ad707115d5
Broken since at least Jan 6 build.

Description
When selecting a pose bone through either the Outliner or Properties panel, the bone doesn't show up as selected in the viewport until the viewport gets an update (navigating in the viewport itself is not enough, but for example pressing G,R,S is)

Note that putting bpy.context.object.data.bones- [x].select=True in the python console works as expected.

Reproduction steps

  • Spawn an armature, go in pose mode
  • Method 1: Try changing the selection of the bone in the Outliner
  • Method 2: Assign the bone to a bonegroup, then use the bonegroups' Select/Deselect function.
  • The selection happens, but you get no visual feedback in the viewport.
[pose_bone_selection_bug.webm](https://archive.blender.org/developer/F6321360/pose_bone_selection_bug.webm) **Blender Version** 2.80 ad707115d5bc Broken since at least Jan 6 build. **Description** When selecting a pose bone through either the Outliner or Properties panel, the bone doesn't show up as selected in the viewport until the viewport gets an update (navigating in the viewport itself is not enough, but for example pressing G,R,S is) Note that putting `bpy.context.object.data.bones- [x].select=True` in the python console works as expected. **Reproduction steps** - Spawn an armature, go in pose mode - Method 1: Try changing the selection of the bone in the Outliner - Method 2: Assign the bone to a bonegroup, then use the bonegroups' Select/Deselect function. - The selection happens, but you get no visual feedback in the viewport.
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sebastian Parborg self-assigned this 2019-01-18 03:25:49 +01:00

I've uploaded a fix to D4223

I've uploaded a fix to [D4223](https://archive.blender.org/developer/D4223)

This issue was referenced by ccc48bf27e

This issue was referenced by ccc48bf27eaa6651674a857a95884d821e42e1a7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60602
No description provided.