Fix T60602: outliner pose bone selection does not update in viewport.

Differential Revision: https://developer.blender.org/D4223