source/blender/editors/armature/pose_select.c
@@ -107,8 +107,7 @@ void ED_pose_bone_select_tag_update(Object *ob)
 		DEG_id_tag_update(&ob->id, ID_RECALC_GEOMETRY);
 	}
 
-	/* copy on write tag is needed (for the armature), or else no refresh happens */
-	DEG_id_tag_update(&arm->id, ID_RECALC_COPY_ON_WRITE);
+	DEG_id_tag_update(&arm->id, ID_RECALC_SELECT);
 }
 
 
